@@ -3,20 +3,19 @@ package io.micronaut.data.model.geo;
 import io.micronaut.core.util.CollectionUtils;
 import io.micronaut.data.annotation.TypeDef;
 import io.micronaut.data.model.DataType;
-import io.micronaut.data.model.runtime.convert.geo.GeoJsonConverter;
+import io.micronaut.data.model.runtime.convert.geo.GeometryConverter;
 import io.micronaut.serde.annotation.Serdeable;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Serdeable
-@TypeDef(type = DataType.STRING, converter = GeoJsonConverter.class)
-public record MultiPoint(List<Point> points) implements GeoJson {
+@TypeDef(type = DataType.STRING, converter = GeometryConverter.class)
+public record MultiPoint(List<Point> points) implements Geometry {
 
     public List<List<Double>> asCoords() {
         return points.stream()
             .map(Point::asCoords)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public static MultiPoint fromCoords(List<List<Double>> coords) {
